--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-
-<router-outlet />
+<router-outlet></router-outlet>
 <div class ="container-register">
   <app-register-container></app-register-container>
 </div>
 
-<router-outlet />
+
