--- a/src/app/components/form-register/form-register.component.html
+++ b/src/app/components/form-register/form-register.component.html
@@ -1,24 +1,32 @@
 <h1>Cadastre-se</h1>
+
 <form action="" method="post">
-<div>
-   <input class="group_inline" type="text" name="" id="" placeholder="primeiro nome">
-   <input class="group_inline" type="text" name="" id="" placeholder="segundo nome">
-</div>
-<div >
-  <input class="group_block" type="email" name="" id="" placeholder="email">
-</div>
-<div>
-  <input class="group_inline" type="text" name="" id="" placeholder="login">
-
-</div>
-<div>
-  <input class="group_inline" type="password" name="" id="" placeholder="senha">
-  <input class="group_inline" type="password" name="" id="" placeholder="confime sua senha">
-</div>
-<div button_register>
-  <button>Registrar</button>
-</div>
-
+  @if(formFlag == false){
+    <div>
+      <input class="group_inline" type="text" name="" id="" placeholder="primeiro nome">
+      <input class="group_inline" type="text" name="" id="" placeholder="segundo nome">
+    </div>
+    <div>
+      <input class="group_block" type="email" name="" id="" placeholder="email">
+    </div>
+    <div>
+      <input class="group_inline" type="password" name="" id="" placeholder="senha">
+      <input class="group_inline" type="password" name="" id="" placeholder="confime sua senha">
+    </div>
+    <div button_register>
+      <button (click)="emitContinueEvent($event)">Continuar</button>
+    </div>
+  }@else {
+    <div>
+      <input class="group_inline" type="text" name="" id="" placeholder="login">
+      <input class="group_inline" type="text" name="" id="" placeholder="telefone">
+    </div>
+    <div>
+      <input class="group_inline" type="text" name="" id="" placeholder="data de nascimento">
+    </div>
+  }
 
 </form>
+
+
 
