--- a/src/app/components/register-container/register-container.component.html
+++ b/src/app/components/register-container/register-container.component.html
@@ -1,4 +1,8 @@
+<div class="selectors">
+  <div [ngStyle]="{'background-color': color_select1}" class="selector"></div>
+  <div [ngStyle]="{'background-color': color_select2}" class="selector"></div>
+</div>
 <div class="container_register">
   <div class="img_register"></div>
-<app-form-register class="form_register"></app-form-register>
+  <app-form-register class="form_register" [formFlag]="selectFlag"  (continueClicked)="handleContinueClick()"></app-form-register>
 </div>
