input date finished  and pages created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
 <router-outlet></router-outlet>
-<div class ="container-register">
-  <app-register-container></app-register-container>
-</div>
-
-
+<app-register></app-register>
