--- a/src/app/components/register-container/register-container.component.html
+++ b/src/app/components/register-container/register-container.component.html
@@ -4,5 +4,5 @@
 </div>
 <div class="container_register">
   <div class="img_register"></div>
-  <app-form-register class="form_register" [formFlag]="selectFlag"  (continueClicked)="handleContinueClick()"></app-form-register>
+  <app-form-register class="form_register" [formFlag]="selectFlag"  (continueClicked)="handleContinueClick()" (backClicked)="handleBackClick()"></app-form-register>
 </div>
