--- a/src/app/components/form-register/form-register.component.html
+++ b/src/app/components/form-register/form-register.component.html
@@ -1,32 +1,42 @@
 <h1>Cadastre-se</h1>
 
 <form action="" method="post">
-  @if(formFlag == false){
-    <div>
-      <input class="group_inline" type="text" name="" id="" placeholder="primeiro nome">
-      <input class="group_inline" type="text" name="" id="" placeholder="segundo nome">
+  @if(formFlag == 1){
+  <div>
+    <input class="group_inline" type="text" name="" id="" placeholder="primeiro nome">
+    <input class="group_inline" type="text" name="" id="" placeholder="segundo nome">
+  </div>
+  <div>
+    <input class="group_block" type="email" name="" id="" placeholder="email">
+  </div>
+  <div>
+    <input class="group_inline" type="password" name="" id="" placeholder="senha">
+    <input class="group_inline" type="password" name="" id="" placeholder="confime sua senha">
+  </div>
+  <div button_register>
+    <button (click)="emitContinueEvent($event)">Continuar</button>
+  </div>
+  }@else if(formFlag == 2) {
+  <div>
+    <input class="group_inline" type="text" name="" id="" placeholder="login">
+    <input class="group_inline" type="text" name="" id="" placeholder="telefone">
+  </div>
+  <div>
+    <mat-form-field appearance="outline" class="datePicker">
+      <mat-label>Data de Nascimento</mat-label>
+      <input matInput [matDatepicker]="picker">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="buttons">
+    <div button_register class="button-voltar">
+      <button (click)="emitBackEvent($event)">Voltar</button>
     </div>
-    <div>
-      <input class="group_block" type="email" name="" id="" placeholder="email">
-    </div>
-    <div>
-      <input class="group_inline" type="password" name="" id="" placeholder="senha">
-      <input class="group_inline" type="password" name="" id="" placeholder="confime sua senha">
-    </div>
-    <div button_register>
+    <div button_register class="button-continuar">
       <button (click)="emitContinueEvent($event)">Continuar</button>
     </div>
-  }@else {
-    <div>
-      <input class="group_inline" type="text" name="" id="" placeholder="login">
-      <input class="group_inline" type="text" name="" id="" placeholder="telefone">
-    </div>
-    <div>
-      <input class="group_inline" type="text" name="" id="" placeholder="data de nascimento">
-    </div>
+  </div>
   }
 
 </form>
-
-
-
