--- a/src/app/components/form-register/form-register.component.css
+++ b/src/app/components/form-register/form-register.component.css
@@ -1,106 +1,126 @@
+/* Animação para o formulário aparecer suavemente */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
-input[type=text],input[type=email],input[type=password]{
+form, .form_2 {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+input[type=text], input[type=email], input[type=password] {
   margin-right: 10px;
   margin-bottom: 15px;
-   background-color: #DDDDDD;
-   outline: none;
-   border: none;
-   height: 35px;
-   border-radius: 5px;
-   padding-left: 30px;
-   font-family: 'Roboto', sans-serif;
- }
- input::placeholder{
-   text-align: left;
-   padding-left: 20px;
-   color:black;
- }
+  background-color: #DDDDDD;
+  outline: none;
+  border: none;
+  height: 35px;
+  border-radius: 5px;
+  padding-left: 30px;
+  font-family: 'Roboto', sans-serif;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
 
- .group_block{
-   width: 97%;
+input:focus {
+  background-color: #FFFFFF;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
 
- }
- .group_inline{
-   flex: 1;
+input::placeholder {
+  text-align: left;
+  padding-left: 20px;
+  color: black;
+}
 
- }
+.group_block {
+  width: 97%;
+}
 
- button
- {
-   color:#DDDDDD;
-   background-color: #920305;
-   outline: none;
-   border: none;
-   height: 35px;
-   border-radius: 5px;
-   width: 97%;
+.group_inline {
+  flex: 1;
+}
 
-   cursor: pointer;
+button {
+  color: #DDDDDD;
+  background-color: #920305;
+  outline: none;
+  border: none;
+  height: 35px;
+  border-radius: 5px;
+  width: 97%;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
 
+button:hover {
+  background-color: #b30606;
+  transform: scale(1.05);
+}
 
- }
-
- .buttons{
+.buttons {
   display: flex;
   justify-content: center;
   align-items: center;
- }
+}
 
- .button-voltar , .button-continuar{
+.button-voltar, .button-continuar {
   width: 50%;
- }
- h1{
-   padding: 40px;
-   font-family: 'Roboto', sans-serif;
- }
+}
 
- input:focus::placeholder {
-   opacity: 0;
- }
+h1 {
+  padding: 40px;
+  font-family: 'Roboto', sans-serif;
+}
 
- /* datePicker  */
- .datePicker{
+input:focus::placeholder {
+  opacity: 0;
+}
+
+/* datePicker */
+.datePicker {
   width: 97%;
- }
+}
 
- ::ng-deep .mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper{
+::ng-deep .mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper {
   background-color: #DDDDDD;
- }
+}
 
- ::ng-deep .mat-calendar-header{
-  background-image: linear-gradient(to right,#920305, #96282a, rgb(226, 182, 182));
- }
+::ng-deep .mat-calendar-header {
+  background-image: linear-gradient(to right, #920305, #96282a, rgb(226, 182, 182));
+}
 
- ::ng-deep .mat-mdc-form-field-subscript-wrapper{
+::ng-deep .mat-mdc-form-field-subscript-wrapper {
   color: black;
- }
+}
 
-::ng-deep .mat-calendar-period-button{
+::ng-deep .mat-calendar-period-button {
   background-color: black;
 }
-::ng-deep  .mat-mdc-button.mat-unthemed {
- --mdc-text-button-label-text-color: black;
+
+::ng-deep .mat-mdc-button.mat-unthemed {
+  --mdc-text-button-label-text-color: black;
 }
 
-::ng-deep .mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-floating-label{
+::ng-deep .mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-floating-label {
   color: black;
 }
 
-::ng-deep .mat-mdc-icon-button.mat-mdc-button-base{
+::ng-deep .mat-mdc-icon-button.mat-mdc-button-base {
   color: black;
 }
+
 ::ng-deep .mat-datepicker-toggle,
 ::ng-deep .mat-datepicker-content .mat-calendar-next-button,
-::ng-deep .mat-datepicker-content .mat-calendar-previous-button{
+::ng-deep .mat-datepicker-content .mat-calendar-previous-button {
   color: black !important;
 }
 
-
-
-
-/*::ng-deep .mat-mdc-button-ripple {
-  background-color: black;
-}*/
 ::ng-deep .mdc-notched-outline .mdc-notched-outline--upgraded {
   border: none;
 }
