--- a/src/app/components/form-register/form-register.component.html
+++ b/src/app/components/form-register/form-register.component.html
@@ -17,26 +17,27 @@
     <button (click)="emitContinueEvent($event)">Continuar</button>
   </div>
   }@else if(formFlag == 2) {
-  <div>
-    <input class="group_inline" type="text" name="" id="" placeholder="login">
-    <input class="group_inline" type="text" name="" id="" placeholder="telefone">
-  </div>
-  <div>
-    <mat-form-field appearance="outline" class="datePicker">
-      <mat-label>Data de Nascimento</mat-label>
-      <input matInput [matDatepicker]="picker">
-      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-  </div>
-  <div class="buttons">
-    <div button_register class="button-voltar">
-      <button (click)="emitBackEvent($event)">Voltar</button>
+  <div class="form_2">
+    <div>
+      <input class="group_inline" type="text" name="" id="" placeholder="login">
+      <input class="group_inline" type="text" name="" id="" placeholder="telefone" mask="(00) 00000-0000">
     </div>
-    <div button_register class="button-continuar">
-      <button (click)="emitContinueEvent($event)">Continuar</button>
+    <div>
+      <mat-form-field appearance="outline" class="datePicker">
+        <mat-label>Data de Nascimento</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <div class="buttons">
+      <div button_register class="button-voltar">
+        <button (click)="emitBackEvent($event)">Voltar</button>
+      </div>
+      <div button_register class="button-continuar">
+        <button (click)="emitContinueEvent($event)">Continuar</button>
+      </div>
     </div>
   </div>
   }
-
 </form>
