--- a/src/app/components/register-container/register-container.component.html
+++ b/src/app/components/register-container/register-container.component.html
@@ -1,6 +1,7 @@
 <div class="selectors">
   <div [ngStyle]="{'background-color': color_select1}" class="selector"></div>
   <div [ngStyle]="{'background-color': color_select2}" class="selector"></div>
+  <div [ngStyle]="{'background-color': color_select3}" class="selector"></div>
 </div>
 <div class="container_register">
   <div class="img_register"></div>
