--- a/src/app/components/form-register/form-register.component.html
+++ b/src/app/components/form-register/form-register.component.html
@@ -1,5 +1,7 @@
 <h1>Cadastre-se</h1>
-
+@if(formFlag == 1 || formFlag == 2){
+  <p class="aviso">*Todos Os campos de formulários são obrigatórios!</p>
+}
 
 @if(formFlag == 1){
 <form [formGroup]="formRegisterOne" action="" method="post">
@@ -9,34 +11,34 @@
         <p *ngIf="!formRegisterOne.get('firstName')?.valid && formRegisterOne.get('firstName')?.touched">* Mínimo 8
           caracteres</p>
       </div>
-      <input type="text" name="firstName" id="" placeholder="primeiro nome" formControlName="firstName">
+      <input  type="text" name="firstName" id="" placeholder="primeiro nome" formControlName="firstName">
     </div>
     <div>
       <div style="height: 20px;">
         <p *ngIf="!formRegisterOne.get('secondName')?.valid && formRegisterOne.get('secondName')?.touched">* Mínimo 8
           caracteres</p>
       </div>
-      <input type="text" name="secondName" id="" placeholder="segundo nome" formControlName="secondName">
+      <input  type="text" name="secondName" id="" placeholder="segundo nome" formControlName="secondName">
     </div>
   </div>
   <div>
     <div style="height: 20px;">
       <p *ngIf="!formRegisterOne.get('email')?.valid && formRegisterOne.get('email')?.touched">* Email invalido</p>
     </div>
-    <input class="group_block" type="email" name="" id="" placeholder="email" formControlName="email">
+    <input  class="group_block" type="email" name="" id="" placeholder="email" formControlName="email">
   </div>
   <div>
     <div style="height: 20px;">
       <p *ngIf="!formRegisterOne.get('password')?.valid && formRegisterOne.get('password')?.touched">* Mínimo 8
-        caracteres , 1 letra maiúscula , 1 letra minúscula , 1 número e um caractere especial </p>
+        caracteres , 1 letra maiúscula , 1 letra minúscula , 1 número e 1 caractere especial </p>
     </div>
-    <input class="group_block" type="password" name="" id="" placeholder="password" formControlName="password">
+    <input  class="group_block" type="password" name="" id="" placeholder="senha" formControlName="password">
   </div>
   <div>
     <div style="height: 20px;">
       <p *ngIf="formRegisterOne.hasError('passwordsDoNotMatch')">* As senhas devem ser iguais</p>
     </div>
-    <input class="group_block" type="password" name="" id="" placeholder="confirmPassword"
+    <input  class="group_block" type="password" name="" id="" placeholder="confirme sua senha"
       formControlName="confirmPassword">
   </div>
   <div button_register>
@@ -46,24 +48,20 @@
 }@else if(formFlag == 2) {
 <form [formGroup]="formRegisterTwo">
   <div>
-    <input class="group_inline" type="text" name="" id="" placeholder="login" formControlName="login">
-    <input class="group_inline" type="text" name="" id="" placeholder="telefone" mask="(00) 00000-0000"
+    <input  class="group_inline" type="text" name="" id="" placeholder="login" formControlName="login">
+    <input  class="group_inline" type="text" name="" id="" placeholder="telefone" mask="(00) 00000-0000"
       formControlName="phone">
   </div>
-  <div>
-    <mat-form-field appearance="outline" class="datePicker">
-      <mat-label>Data de Nascimento</mat-label>
-      <input matInput [matDatepicker]="picker">
-      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
+  <div  class="date-container">
+   <input  type="date" name="" id="" placeholder="data de nascimento" formControlName="birthDate">
+   <label for="birthDate" class="date-placeholder">Data de Nascimento</label>
   </div>
   <div class="buttons">
     <div button_register class="button-voltar">
       <button (click)="emitBackEvent($event)">Voltar</button>
     </div>
     <div button_register class="button-continuar">
-      <button (click)="emitContinueEvent($event)">Continuar</button>
+      <button (click)="emitContinueEvent($event)" [disabled]="!formRegisterTwo.valid">Continuar</button>
     </div>
   </div>
 </form>
