--- a/src/app/pages/register/components/register-container/register-container.component.css
+++ b/src/app/pages/register/components/register-container/register-container.component.css
@@ -11,7 +11,7 @@
 .img_register{
   height: 90%;
   width: 50%;
-  background-image: url("../../../assets/img/G1.jpg");
+  background-image: url("../../../../../assets/img/G1.jpg");
   background-size: cover;
   background-position: center;
   border-radius: 5%;
