conection with api finished

--- a/src/app/pages/register/components/form-register/form-register.component.html
+++ b/src/app/pages/register/components/form-register/form-register.component.html
@@ -1,6 +1,6 @@
 <h1>Cadastre-se</h1>
 @if(formFlag == 1 || formFlag == 2){
-  <p class="aviso">*Todos Os campos de formulários são obrigatórios!</p>
+<p class="aviso">*Todos Os campos de formulários são obrigatórios!</p>
 }
 
 @if(formFlag == 1){
@@ -8,37 +8,33 @@
   <div class="form_inline">
     <div>
       <div style="height: 20px;">
-        <p *ngIf="!formRegisterOne.get('firstName')?.valid && formRegisterOne.get('firstName')?.touched">* Mínimo 8
-          caracteres</p>
       </div>
-      <input  type="text" name="firstName" id="" placeholder="primeiro nome" formControlName="firstName">
+      <input type="text" name="firstName" id="" placeholder="primeiro nome" formControlName="firstName">
     </div>
     <div>
       <div style="height: 20px;">
-        <p *ngIf="!formRegisterOne.get('secondName')?.valid && formRegisterOne.get('secondName')?.touched">* Mínimo 8
-          caracteres</p>
       </div>
-      <input  type="text" name="secondName" id="" placeholder="segundo nome" formControlName="secondName">
+      <input type="text" name="secondName" id="" placeholder="segundo nome" formControlName="secondName">
     </div>
   </div>
   <div>
     <div style="height: 20px;">
       <p *ngIf="!formRegisterOne.get('email')?.valid && formRegisterOne.get('email')?.touched">* Email invalido</p>
     </div>
-    <input  class="group_block" type="email" name="" id="" placeholder="email" formControlName="email">
+    <input class="group_block" type="email" name="" id="" placeholder="email" formControlName="email">
   </div>
   <div>
     <div style="height: 20px;">
       <p *ngIf="!formRegisterOne.get('password')?.valid && formRegisterOne.get('password')?.touched">* Mínimo 8
         caracteres , 1 letra maiúscula , 1 letra minúscula , 1 número e 1 caractere especial </p>
     </div>
-    <input  class="group_block" type="password" name="" id="" placeholder="senha" formControlName="password">
+    <input class="group_block" type="password" name="" id="" placeholder="senha" formControlName="password">
   </div>
   <div>
     <div style="height: 20px;">
       <p *ngIf="formRegisterOne.hasError('passwordsDoNotMatch')">* As senhas devem ser iguais</p>
     </div>
-    <input  class="group_block" type="password" name="" id="" placeholder="confirme sua senha"
+    <input class="group_block" type="password" name="" id="" placeholder="confirme sua senha"
       formControlName="confirmPassword">
   </div>
   <div button_register>
@@ -48,13 +44,13 @@
 }@else if(formFlag == 2) {
 <form [formGroup]="formRegisterTwo">
   <div>
-    <input  class="group_inline" type="text" name="" id="" placeholder="login" formControlName="login">
-    <input  class="group_inline" type="text" name="" id="" placeholder="telefone" mask="(00) 00000-0000"
+    <input class="group_inline" type="text" name="" id="" placeholder="login" formControlName="login">
+    <input class="group_inline" type="text" name="" id="" placeholder="telefone" mask="(00) 00000-0000"
       formControlName="phone">
   </div>
-  <div  class="date-container">
-   <input  type="date" name="" id="" placeholder="data de nascimento" formControlName="birthDate">
-   <label for="birthDate" class="date-placeholder">Data de Nascimento</label>
+  <div class="date-container bg-blue">
+    <input type="date" name="" id="" placeholder="data de nascimento" formControlName="birthDate">
+    <label for="birthDate" class="date-placeholder">Data de Nascimento</label>
   </div>
   <div class="buttons">
     <div button_register class="button-voltar">
@@ -66,67 +62,67 @@
   </div>
 </form>
 }@else if (formFlag == 3) {
-<form style="width: 100%;">
+<form style="width: 100%;" [formGroup]="formCategories">
   <h2>Escolha as Categorias que deseja ver as noticias:</h2>
   <div class="categories">
     <div class="categories-part-1">
       <div class="checkbox-custom" style="width: 300px;">
-        <input type="checkbox" name="" id="carros-category">
+        <input type="checkbox" name="" id="carros-category" formControlName="carros">
         <label for="carros-category"> Carros (Autoesporte.com)</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="ciencia-saude-category">
+        <input type="checkbox" name="" id="ciencia-saude-category" formControlName="cienciaSaude">
         <label for="ciencia-saude-category"> Ciência e Saúde</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="concurso-empregos-cateogy">
+        <input type="checkbox" name="" id="concurso-empregos-cateogy" formControlName="concursoEmpregos">
         <label for="concurso-empregos-cateogy"> Concursos e Emprego</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="economia-category">
+        <input type="checkbox" name="" id="economia-category" formControlName="economia">
         <label for="economia-category"> Economia</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="educação">
+        <input type="checkbox" name="" id="educação" formControlName="educacao">
         <label for="educação"> Educação</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="loterias-category">
+        <input type="checkbox" name="" id="loterias-category" formControlName="loterias">
         <label for="loterias-category"> Educação</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="mundo-category">
+        <input type="checkbox" name="" id="mundo-category" formControlName="mundo">
         <label for="mundo-category"> Mundo</label>
       </div>
 
     </div>
     <div class="categories-part-2">
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="musica-category">
+        <input type="checkbox" name="" id="musica-category" formControlName="musica">
         <label for="musica-category"> Música</label>
       </div>
       <div class="checkbox-custom" style="width: 120px;">
-        <input type="checkbox" name="" id="natureza-category">
+        <input type="checkbox" name="" id="natureza-category" formControlName="natureza">
         <label for="natureza-category"> Natureza</label>
       </div>
       <div class="checkbox-custom" style="width: 300px;">
-        <input type="checkbox" name="" id="planeta-bizarro-category">
+        <input type="checkbox" name="" id="planeta-bizarro-category" formControlName="planetaBizarro">
         <label for="planeta-bizarro-category"> Planeta Bizarro</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="politica-category">
+        <input type="checkbox" name="" id="politica-category" formControlName="politica">
         <label for="politica-category"> Política</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="pop-arte-category">
+        <input type="checkbox" name="" id="pop-arte-category" formControlName="popArte">
         <label for="pop-arte-category"> Pop & Arte</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="tecnologia-games-category">
+        <input type="checkbox" name="" id="tecnologia-games-category" formControlName="tecnologiaGames">
         <label for="tecnologia-games-category"> Tecnologia e Games</label>
       </div>
       <div class="checkbox-custom">
-        <input type="checkbox" name="" id="turismo-viagem-category">
+        <input type="checkbox" name="" id="turismo-viagem-category" formControlName="turismoViagem">
         <label for="turismo-viagem-category"> Turismo e Viagem</label>
       </div>
     </div>
@@ -136,7 +132,7 @@
       <button (click)="emitBackEvent($event)">Voltar</button>
     </div>
     <div style="width: 45%;" button_register class="button-continuar">
-      <button (click)="emitContinueEvent($event)">Registrar</button>
+      <button (click)="preventDefault($event)" (click)="submitForm()">Registrar</button>
     </div>
   </div>
 </form>
