--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
-*{
+
+
+* {
 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
